Fixed some invalid HTML.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
+<!DOCTYPE html>
+
 <!--
 FILE NAME: index.html
-WRITTEN BY: H&aring;vard, Runar, Petter, Thomas
+WRITTEN BY: Håvard, Runar, Petter, Thomas
 WHEN: 2016 autumn
 PORPOSE: Main webpage, loads content pages through AJAX.
 -->
 
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
@@ -26,7 +27,7 @@ PORPOSE: Main webpage, loads content pages through AJAX.
     <!-- Website style -->
     <link rel="stylesheet" href="style/site.css" />
     <!-- Fonts -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono|Roboto+Slab">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto%7CRoboto+Mono%7CRoboto+Slab">
 	<style>
 
 	.dropdownContent {
@@ -50,6 +51,7 @@ PORPOSE: Main webpage, loads content pages through AJAX.
     <link rel="icon" type="image/png" href="favicon/favicon-32x32.png?v=Om5QWMBdJg" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon/favicon-16x16.png?v=Om5QWMBdJg" sizes="16x16">
     <link rel="manifest" href="favicon/manifest.json?v=Om5QWMBdJg">
+    <!-- Blame Apple for the non-standard color attribute below. -->
     <link rel="mask-icon" href="favicon/safari-pinned-tab.svg?v=Om5QWMBdJg" color="#5bbad5">
     <link rel="shortcut icon" href="favicon/favicon.ico?v=Om5QWMBdJg">
     <meta name="apple-mobile-web-app-title" content="Build-a-PC">
@@ -132,7 +134,7 @@ PORPOSE: Main webpage, loads content pages through AJAX.
           <div class="clearfix"></div>
         </div>
 
-        <main id="content" />
+        <main id="content"></main>
       </div>
     </div>
       <div id="site-footer-container">
