Just checking formating

--- a/pages/parts/cpu_ram.inc.html
+++ b/pages/parts/cpu_ram.inc.html
@@ -23,7 +23,11 @@
         <h1><a href="#cpu">CPU</a></h1>
       </header>
 
-      <p>Lorem ipsum dolor sit amet.</p>
+      <p>CPU aka Central Processing Unit or the brain in the computer. The CPU is the most important part of a computer, it prosscess all of your data into something we can understand.</p>
+	  <p>The first CPUs filled entire rooms, and they have now shrink down to being the same size as a penny. The speed of them has incressed in a same matter. This is all possible because of advancment in technology, the invention of transistor is to this date the biggest advancment. We have now the tecknology to make transistors as big as 14nm (comersial) soon 7 and 10nm. We are coming close to the point that we can't shrink them anymore.</p>
+	  <p>When you are buying CPU for your PC there are somethings to watch over. Generation, low/mid/high model, produsent, platform.</p>
+	  <p>Generation: If you are looking on two CPU at the same price, and the only differnece is the generation of them, it is almost always best to take newest one, not only because of the speed increase but also power saving, new features that are introduce or integrated into the CPU.</p>
+	  <p>Low/Mid/High model: 
     </section>
 
     <section id="ram">
@@ -31,7 +35,7 @@
         <h1><a href="#ram">RAM</a></h1>
       </header>
 
-      <p>Lorem ipsum dolor sit amet.</p>
+      <p>RAM or Random Access Memory is the place your data is stored when it in use. When you boot up your computer the OS is loaded into the RAM </p>
     </section>
   </body>
 </html>
