Added missing page to navbar.

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@ PORPOSE: Main webpage, loads content pages through AJAX.
               <a class="top" href="#">Parts</a>
               <ul>
                 <li><a href="?section=parts">Parts</a></li>
+                <li><a href="?section=parts&amp;page=cpu_ram">CPU and RAM</a></li>
                 <li><a href="?section=parts&amp;page=mb_gpu">Motherboard and GPU</a></li>
                 <li><a href="?section=parts&amp;page=storage_nic_sc">Storage, network card, sound card</a></li>
                 <li><a href="?section=parts&amp;page=cooling_psu_case">Cooling, PSU, case</a></li>
