--- a/pages/parts/cooling_psu_case.inc.html
+++ b/pages/parts/cooling_psu_case.inc.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <meta name="description" content="Parts: Cooling, PSU and Case" />
-    <meta name="author" content="Ad Infinitum" />
+    <meta name="author" content="Petter" />
     <meta name="section" content="parts" />
     <meta name="page" content="cooling_psu_case" />
     <meta name="section_name" content="Parts" />
     <meta name="page_name" content="Cooling, PSU and Case" />
     <meta name="prev_page_uri" content="?section=parts&amp;page=storage_nic_sc" />
-    <meta name="prev_page_name" content="Parts: Storage, Network Card and Sound Card" />
+    <meta name="prev_page_name" content="[Parts] Storage, Network Card and Sound Card" />
     <meta name="next_page_uri" content="?section=parts&amp;page=accessories" />
-    <meta name="next_page_name" content="Parts: Accessories" />
+    <meta name="next_page_name" content="[Parts] Accessories" />
     <meta name="show_breadcrumbs" content="true" />
     <meta name="show_page_breadcrumb" content="true" />
     <title>Parts: Cooling, PSU and Case</title>
