--- a/pages/parts/cpu_ram.inc.html
+++ b/pages/parts/cpu_ram.inc.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="description" content="Parts: CPU and RAM" />
-    <meta name="author" content="Ad Infinitum" />
+    <meta name="author" content="Petter" />
     <meta name="section" content="parts" />
     <meta name="page" content="cpu_ram" />
     <meta name="section_name" content="Parts" />
@@ -11,7 +11,7 @@
     <meta name="prev_page_uri" content="?section=parts" />
     <meta name="prev_page_name" content="Parts" />
     <meta name="next_page_uri" content="?section=parts&amp;page=mb_gpu" />
-    <meta name="next_page_name" content="Parts: Motherboard and Video Card" />
+    <meta name="next_page_name" content="[Parts] Motherboard and Video Card" />
     <meta name="show_breadcrumbs" content="true" />
     <meta name="show_page_breadcrumb" content="true" />
     <title>Parts: CPU and RAM</title>
@@ -27,7 +27,7 @@
 	  <p>The first CPUs filled entire rooms, and they have now shrink down to being the same size as a penny. The speed of them has incressed in a same matter. This is all possible because of advancment in technology, the invention of transistor is to this date the biggest advancment. We have now the tecknology to make transistors as big as 14nm (comersial) soon 7 and 10nm. We are coming close to the point that we can't shrink them anymore.</p>
 	  <p>When you are buying CPU for your PC there are somethings to watch over. Generation, low/mid/high model, produsent, platform.</p>
 	  <p>Generation: If you are looking on two CPU at the same price, and the only differnece is the generation of them, it is almost always best to take newest one, not only because of the speed increase but also power saving, new features that are introduce or integrated into the CPU.</p>
-	  <p>Low/Mid/High model: 
+	  <p>Low/Mid/High model:
     </section>
 
     <section id="ram">
