--- a/pages/parts/mb_gpu.inc.html
+++ b/pages/parts/mb_gpu.inc.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <meta name="description" content="Parts: Motherboard and Video Card" />
-    <meta name="author" content="Ad Infinitum" />
+    <meta name="author" content="Petter" />
     <meta name="section" content="parts" />
     <meta name="page" content="mb_gpu" />
     <meta name="section_name" content="Parts" />
     <meta name="page_name" content="Motherboard and Video Card" />
     <meta name="prev_page_uri" content="?section=parts&amp;page=cpu_ram" />
-    <meta name="prev_page_name" content="Parts: CPU and RAM" />
+    <meta name="prev_page_name" content="[Parts] CPU and RAM" />
     <meta name="next_page_uri" content="?section=parts&amp;page=storage_nic_sc" />
-    <meta name="next_page_name" content="Parts: Storage, Network Card and Sound Card" />
+    <meta name="next_page_name" content="[Parts] Storage, Network Card and Sound Card" />
     <meta name="show_breadcrumbs" content="true" />
     <meta name="show_page_breadcrumb" content="true" />
     <title>Parts: Motherboard and Video Card</title>
