--- a/pages/parts/storage_nic_sc.inc.html
+++ b/pages/parts/storage_nic_sc.inc.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="description" content="Parts: Storage, Network Card and Sound Card" />
-    <meta name="author" content="Ad Infinitum" />
+    <meta name="author" content="Petter" />
     <meta name="section" content="parts" />
     <meta name="page" content="storage_nic_sc" />
     <meta name="section_name" content="Parts" />
@@ -11,7 +11,7 @@
     <meta name="prev_page_uri" content="?section=parts&amp;page=mb_gpu" />
     <meta name="prev_page_name" content="Parts: Motherboard and Video Card" />
     <meta name="next_page_uri" content="?section=parts&amp;page=cooling_psu_case" />
-    <meta name="next_page_name" content="Parts: Cooling, PSU and Case" />
+    <meta name="next_page_name" content="[Parts] Cooling, PSU and Case" />
     <meta name="show_breadcrumbs" content="true" />
     <meta name="show_page_breadcrumb" content="true" />
     <title>Parts: Storage, Network Card and Sound Card</title>
