--- a/pages/assembly/assembly.inc.html
+++ b/pages/assembly/assembly.inc.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <meta name="description" content="Assembling the PC" />
-    <meta name="author" content="Ad Infinitum" />
+    <meta name="author" content="H&aring;vard" />
     <meta name="section" content="assembly" />
     <meta name="page" content="assembly" />
     <meta name="section_name" content="Assembling the PC" />
     <meta name="page_name" content="Assembling the PC" />
     <meta name="prev_page_uri" content="?section=oss&amp;page=quiz" />
-    <meta name="prev_page_name" content="Operating Systems: Quiz" />
+    <meta name="prev_page_name" content="[Operating Systems] Quiz" />
     <meta name="next_page_uri" content="?section=assembly&amp;page=hardware" />
-    <meta name="next_page_name" content="Assembling the PC: Hardware" />
+    <meta name="next_page_name" content="[Assembling the PC] Hardware" />
     <meta name="show_breadcrumbs" content="true" />
     <meta name="show_page_breadcrumb" content="false" />
     <title>Assembling the PC</title>
