--- a/pages/assembly/quiz.inc.html
+++ b/pages/assembly/quiz.inc.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <meta name="description" content="Parts: Quiz" />
-    <meta name="author" content="Ad Infinitum" />
+    <meta name="author" content="H&aring;vard" />
     <meta name="section" content="assembly" />
     <meta name="page" content="quiz" />
     <meta name="section_name" content="Assembling the PC" />
     <meta name="page_name" content="Quiz" />
     <meta name="prev_page_uri" content="?section=assembly&amp;page=software" />
-    <meta name="prev_page_name" content="Assembling the PC: Software" />
+    <meta name="prev_page_name" content="[Assembling the PC] Software" />
     <meta name="next_page_uri" content="" />
     <meta name="next_page_name" content="" />
     <meta name="show_breadcrumbs" content="true" />
