--- a/pages/oss/oss.inc.html
+++ b/pages/oss/oss.inc.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="description" content="Operating Systems" />
-    <meta name="author" content="Ad Infinitum" />
+    <meta name="author" content="Thomas" />
     <meta name="section" content="oss" />
     <meta name="page" content="oss" />
     <meta name="section_name" content="Operating Systems" />
@@ -11,7 +11,7 @@
     <meta name="prev_page_uri" content="?section=vendors" />
     <meta name="prev_page_name" content="Part Vendors" />
     <meta name="next_page_uri" content="?section=oss&amp;page=windows" />
-    <meta name="next_page_name" content="Operating Systems: Windows" />
+    <meta name="next_page_name" content="[Operating Systems] Windows" />
     <meta name="show_breadcrumbs" content="true" />
     <meta name="show_page_breadcrumb" content="false" />
     <title>Operating Systems</title>
