--- a/pages/parts/accessories.inc.html
+++ b/pages/parts/accessories.inc.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <meta name="description" content="Parts: Accessories" />
-    <meta name="author" content="Ad Infinitum" />
+    <meta name="author" content="Petter" />
     <meta name="section" content="parts" />
     <meta name="page" content="accessories" />
     <meta name="section_name" content="Parts" />
     <meta name="page_name" content="Cooling, PSU and Case" />
     <meta name="prev_page_uri" content="?section=parts&amp;page=cooling_psu_case" />
-    <meta name="prev_page_name" content="Parts: Cooling, PSU and Case" />
+    <meta name="prev_page_name" content="[Parts] Cooling, PSU and Case" />
     <meta name="next_page_uri" content="?section=parts&amp;page=quiz" />
-    <meta name="next_page_name" content="Parts: Quiz" />
+    <meta name="next_page_name" content="[Parts] Quiz" />
     <meta name="show_breadcrumbs" content="true" />
     <meta name="show_page_breadcrumb" content="true" />
     <title>Parts: Accessories</title>
