--- a/pages/parts/parts.inc.html
+++ b/pages/parts/parts.inc.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="description" content="Parts" />
-    <meta name="author" content="Ad Infinitum" />
+    <meta name="author" content="Petter" />
     <meta name="section" content="parts" />
     <meta name="page" content="parts" />
     <meta name="section_name" content="Parts" />
@@ -11,7 +11,7 @@
     <meta name="prev_page_uri" content="" />
     <meta name="prev_page_name" content="" />
     <meta name="next_page_uri" content="?section=parts&amp;page=cpu_ram" />
-    <meta name="next_page_name" content="Parts: CPU and RAM" />
+    <meta name="next_page_name" content="[Parts] CPU and RAM" />
     <meta name="show_breadcrumbs" content="true" />
     <meta name="show_page_breadcrumb" content="false" />
     <title>Parts</title>
