--- a/pages/parts/quiz.inc.html
+++ b/pages/parts/quiz.inc.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <meta name="description" content="Parts: Quiz" />
-    <meta name="author" content="Ad Infinitum" />
+    <meta name="author" content="Petter" />
     <meta name="section" content="parts" />
     <meta name="page" content="quiz" />
     <meta name="section_name" content="Parts" />
     <meta name="page_name" content="Quiz" />
     <meta name="prev_page_uri" content="?section=parts&amp;page=accessories" />
-    <meta name="prev_page_name" content="Parts: Accessories" />
+    <meta name="prev_page_name" content="[Parts] Accessories" />
     <meta name="next_page_uri" content="?section=vendors" />
     <meta name="next_page_name" content="Part Vendors" />
     <meta name="show_breadcrumbs" content="true" />
