--- a/pages/parts/storage_nic_sc.inc.html
+++ b/pages/parts/storage_nic_sc.inc.html
@@ -9,7 +9,7 @@
     <meta name="section_name" content="Parts" />
     <meta name="page_name" content="Storage, Network Card and Sound Card" />
     <meta name="prev_page_uri" content="?section=parts&amp;page=mb_gpu" />
-    <meta name="prev_page_name" content="Parts: Motherboard and Video Card" />
+    <meta name="prev_page_name" content="[Parts] Motherboard and Video Card" />
     <meta name="next_page_uri" content="?section=parts&amp;page=cooling_psu_case" />
     <meta name="next_page_name" content="[Parts] Cooling, PSU and Case" />
     <meta name="show_breadcrumbs" content="true" />
