Fixed ajax.js bug.

--- a/pages/oss/oss.inc.html
+++ b/pages/oss/oss.inc.html
@@ -8,8 +8,8 @@
     <meta name="page" content="oss" />
     <meta name="section_name" content="Operating Systems" />
     <meta name="page_name" content="Operating Systems" />
-    <meta name="prev_page_uri" content="?section=vendors" />
-    <meta name="prev_page_name" content="Part Vendors" />
+    <meta name="prev_page_uri" content="?section=vendors&amp;page=quiz" />
+    <meta name="prev_page_name" content="[Part Vendors] Quiz" />
     <meta name="next_page_uri" content="?section=oss&amp;page=windows" />
     <meta name="next_page_name" content="[Operating Systems] Windows" />
     <meta name="show_breadcrumbs" content="true" />
