Fiksed quiz.js, search.js removed tabs, var til let, +++

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ PORPOSE: Main webpage, loads content pages through AJAX.
     <script src="scripts/breadcrumbs.js" defer></script>
     <script src="scripts/search.js" defer></script>
     <script src="scripts/navbar.js" defer></script>
-    <script src="scripts/search.js" defer></script>
+    <script src="scripts/quiz.js" defer></script>
 
     <!-- Style normalizer: Normalize.css -->
     <link rel="stylesheet" href="style/normalize.css" />
