Added new pictures_resize_comprimsed_all
44 pictures total: 7,45MB, down form 15 pictures total.100MB

--- a/pages/parts/cpu_ram.inc.html
+++ b/pages/parts/cpu_ram.inc.html
@@ -27,7 +27,9 @@
 	  <p>The first CPUs filled entire rooms, and they have now shrink down to being the same size as a penny. The speed of them has incressed in a same matter. This is all possible because of advancment in technology, the invention of transistor is to this date the biggest advancment. We have now the tecknology to make transistors as big as 14nm (comersial) soon 7 and 10nm. We are coming close to the point that we can't shrink them anymore.</p>
 	  <p>When you are buying CPU for your PC there are somethings to watch over. Generation, low/mid/high model, produsent, platform.</p>
 	  <p>Generation: If you are looking on two CPU at the same price, and the only differnece is the generation of them, it is almost always best to take newest one, not only because of the speed increase but also power saving, new features that are introduce or integrated into the CPU.</p>
-	  <p>Low/Mid/High model:
+	  <p>Low/Mid/High model: It can be really hard to se the differnce between low/mid/high models, because most of the differences is hidden or very advanced and not likely written on their information note. The easiest way is to look at the price, often the pricer the better. One more things is number of cores if you look at the same vendor, the more the better.</p>
+	  <p>Produsent or Vendor: For normal consumer PC AMD and Intel is the biggest CPU produsents, where Intel have the repuation of having the best performing CPUs but also the priciest, where AMD have great CPUs for have decent price. But this can change when a new generation is released.</p>
+	  <p>Platfrom:
     </section>
 
     <section id="ram">
