Wrote Assembly - Hardware page.

--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@ PORPOSE: Main webpage, loads content pages through AJAX.
         </div>
 
         <main id="content"></main>
+
+        <!-- This BR makes sure floating elements don't float into center element padding under footer. -->
+        <br class="clearfix" />
       </div>
     </div>
       <div id="site-footer-container">
