--- a/pages/assembly/hardware.inc.html
+++ b/pages/assembly/hardware.inc.html
@@ -23,7 +23,206 @@
         <h1><a href="#hardware">Hardware</a></h1>
       </header>
 
-      <p>Lorem ipsum dolor sit amet.</p>
+      <h2 id="infto"><a href="#intro">Introduction</a></h2>
+      <figure class="width-40 float-right">
+        <a href="images/assembly/i1.jpg" target="_blank"><img alt="The tools" src="images/assembly/i1.jpg" /></a>
+        <figcaption>The tools, except a wrench and a flashlight.</figcaption>
+      </figure>
+      <figure class="width-40 float-right">
+        <a href="images/assembly/i2.jpg" target="_blank"><img alt="GPUs, RAM modules, thermal compound, CPU, CPU cooler, SLI bridge, mother board back panel and motherboard" src="images/assembly/i2.jpg" /></a>
+        <figcaption>Two video cards w/ SLI bridge, four RAM modules, CPU, CPU cooler, motherboard back panel, motherboard.</figcaption>
+      </figure>
+      <figure class="width-40 float-right">
+        <a href="images/assembly/i3.jpg" target="_blank"><img alt="SATA, power and fan splitter cables." src="images/assembly/i3.jpg" /></a>
+        <figcaption>SATA cables to the right (came with motherboard), power cables to the right (came with PSU) and fan cable splitter in the middle.</figcaption>
+      </figure>
+      <figure class="width-40 float-right">
+        <a href="images/assembly/i4.jpg" target="_blank"><img alt="PSU, two HDDs and a SSD" src="images/assembly/i4.jpg" /></a>
+        <figcaption>PSU, two HDDs and an SSD.</figcaption>
+      </figure>
+
+      <p><b>Warning</b>: I strongly recommend using a anti-static wrist wrap if you don't want to destroy the tiny electronics in your components.
+      Also, think twice about using a wool sweather, rubbing your sucks on the carpet, or other things that tend to build up static electricity.</p>
+      <p><b>Warning</b>: Most computers use two kinds of screws that look the same but actually has different threading. Always check if your using the right one.
+      If you feel resistance when screwing it, make sure it's the right type.</p>
+
+      <p>Tools:</p>
+      <ul>
+        <li>Philips screw drivers (PH1 and PH0) (required)</li>
+        <li>Anti-static wrist wrap (highly recommended)</li>
+        <li>Needle-nose pliers</li>
+        <li>Wrench</li>
+        <li>Knife</li>
+        <li>Container for screws and stuff</li>
+        <li>Cable ties</li>
+        <li>Flashlight</li>
+      </ul>
+
+      <p>Parts (the ones I'm using):</p>
+      <ul>
+        <li>Case <br />(CM Storm Trooper)</li>
+        <li>PSU <br />(Corsair CX750M)</li>
+        <li>Motherboard w/ back panel <br />(ASUS Maximus V Gene)</li>
+        <li>CPU w/ cooler and thermal compound <br />(Intel i7-3770 w/ stick Intel fan and Noctua NT-H1 compound)</li>
+        <li>RAM module(s) <br />(4x HyperX Genesis 4GB)</li>
+        <li>HDD/SSD <br />(Seagate 3TB, Samsung 2TB, Intel SSD 330 120GB)</li>
+        <li>Power cables (if modular PSU), SATA cables, standoff screws (for motherboard), other screws</li>
+      </ul>
+      <p>Optional parts:</p>
+      <ul>
+        <li>Video card(s) <br />(2x EVGA GTX 770 w/ SLI bridge)</li>
+        <li>Optical drive</li>
+        <li>WiFi adapter (USB or PCIe) <br />(I have a mini-PCIe card because my motherboard supports it.)</li>
+        <li>Accessories like monitor, keyboard, speakers, etc.</li>
+      </ul>
+
+      <br class="clearfix" />
+      <h2 id="assembly"><a href="#assembly">Assembling the Hardware</a></h2>
+      <figure class="width-40 float-right">
+        <a href="images/assembly/a1.jpg" target="_blank"><img alt="Step 1" src="images/assembly/a1.jpg" /></a>
+        <figcaption>Step 1</figcaption>
+      </figure>
+      <p><b>Step 1</b>: Open the case. It probably has a few screws on the back for each side panel, and then you probably have to slide the panels towards the back to loosen them.</p>
+
+      <br class="clearfix" />
+      <figure class="width-40 float-right">
+        <a href="images/assembly/a2.jpg" target="_blank"><img alt="Step 2" src="images/assembly/a2.jpg" /></a>
+        <figcaption>Step 2</figcaption>
+      </figure>
+      <p><b>Step 2</b>: Find the standoff scree holes which match your motherboard format. The holes are usually labeled, my case had letters assigned to the holes and a table below for which holes to use.</p>
+
+      <br class="clearfix" />
+      <figure class="width-40 float-right">
+        <a href="images/assembly/a3.jpg" target="_blank"><img alt="Step 3" src="images/assembly/a3.jpg" /></a>
+        <figcaption>Step 3</figcaption>
+      </figure>
+      <p><b>Step 3</b>: Open the CPU holder and remove the plastic placeholder. Insert the CPU, which only fits one way (it has a small triangle in one corner as well). Fasten the CPU holder.</p>
+
+      <br class="clearfix" />
+      <figure class="width-40 float-right">
+        <a href="images/assembly/a4.jpg" target="_blank"><img alt="Step 4" src="images/assembly/a4.jpg" /></a>
+        <figcaption>Step 4</figcaption>
+      </figure>
+      <p><b>Step 4</b>: Apply the thermal compound. Use about as much as I used in the picture, and make sure to apply it so that it has as little as possible bubbles when you attach the cooler.
+        Bubbles will cause poor cooling for the spots below the bubbles on your CPU.</p>
+
+      <br class="clearfix" />
+      <figure class="width-40 float-right">
+        <a href="images/assembly/a5.jpg" target="_blank"><img alt="Step 5" src="images/assembly/a5.jpg" /></a>
+        <figcaption>Step 5</figcaption>
+      </figure>
+      <p><b>Step 5</b>: Attach the CPU cooler. It probably has four knob-like objects to fasten it with.
+        Turn them all the way clock-wise and then push the cooler (don't push down the knobs yet) directly down into its fastening holes, so that you cause as few as possible bubbles in the thermal compound.
+        Now that the "pins" below the knobs are all the way through the motherboard, push down the knobs which locks the pins to the motherboard.
+        I prefer to install the CPU before attaching the motherboard to the case, since that can make it slightly harder.</p>
+
+      <br class="clearfix" />
+      <figure class="width-40 float-right">
+        <a href="images/assembly/a6.jpg" target="_blank"><img alt="Step 6" src="images/assembly/a6.jpg" /></a>
+        <figcaption>Step 6</figcaption>
+      </figure>
+      <p><b>Step 6</b>: Attach the motherboard back panel to the case. Push it into position from the inside of the case. My panel has two WiFi antenna connectors with wires I will connect into the WiFi module later.</p>
+
+      <br class="clearfix" />
+      <figure class="width-40 float-right">
+        <a href="images/assembly/a7.jpg" target="_blank"><img alt="Step 7" src="images/assembly/a7.jpg" /></a>
+        <figcaption>Step 7</figcaption>
+      </figure>
+      <p><b>Step 7</b>: Attach the motherboard to the case. I recommend laying down the case for this part, since it can be hard to hold the motherboard in place while trying to attach it.
+        You might have to slide it in from the side if your back panel has those metal flaps going inward. Now add screws in all holes, which have standoff screws below them, as long as you didn't forget any holes.</p>
+
+      <br class="clearfix" />
+      <figure class="width-40 float-right">
+        <a href="images/assembly/a8.jpg" target="_blank"><img alt="Step 8" src="images/assembly/a8.jpg" /></a>
+        <figcaption>Step 8</figcaption>
+      </figure>
+      <p><b>Step 8</b>: Install the RAM modules. Insert them the right direction, possibly at a slight angle. They will lock in place once far enough in.</p>
+
+      <br class="clearfix" />
+      <figure class="width-40 float-right">
+        <a href="images/assembly/a9.jpg" target="_blank"><img alt="Step 9" src="images/assembly/a9.jpg" /></a>
+        <figcaption>Step 9</figcaption>
+      </figure>
+      <p><b>Step 9</b>: Attach the PSU. It has four screw holes, so place it the right way on the inside of the case and screw it in place from the outside.</p>
+
+      <br class="clearfix" />
+      <figure class="width-40 float-right">
+        <a href="images/assembly/a10.jpg" target="_blank"><img alt="Step 10" src="images/assembly/a10.jpg" /></a>
+        <figcaption>Step 10</figcaption>
+      </figure>
+      <p><b>Step 10</b>: Attach the HDDs/SSDs. The case might have some plastic contraptions to install the drives.
+        As you can see in one of my part pictures, I just had to place my drives into these plastic containers and slide them into place, where they locked in place.
+        If your case doesn't have these, then slide the drives into place and fasten them with screws from the side. Be careful to use screws with correct thresding.</p>
+
+      <br class="clearfix" />
+      <figure class="width-40 float-right">
+        <a href="images/assembly/a11.jpg" target="_blank"><img alt="Step 11" src="images/assembly/a11.jpg" /></a>
+        <figcaption>Step 11</figcaption>
+      </figure>
+      <p><b>Step 11</b>: Attach the optical drive. Slide it into place and fasten it using screws from the side with correct threading.
+        You probably have to replace some panel on the front of the case to make place for it.</p>
+
+      <br class="clearfix" />
+      <figure class="width-40 float-right">
+        <a href="images/assembly/a12.jpg" target="_blank"><img alt="Step 12" src="images/assembly/a12.jpg" /></a>
+        <figcaption>Step 12</figcaption>
+      </figure>
+      <p><b>Step 12</b>: Attach power cables and cables from the case to your motherboard. There are usually two cables from the power supply,
+        a few smaller cables connecting the power buttons and some LED lights and often some cables for USB and audio ports on the case.
+        Check your instruction manual for instruction for what to connect where.</p>
+
+      <br class="clearfix" />
+      <figure class="width-40 float-right">
+        <a href="images/assembly/a13.jpg" target="_blank"><img alt="Step 13" src="images/assembly/a13.jpg" /></a>
+        <figcaption>Step 13</figcaption>
+      </figure>
+      <p><b>Step 13</b>: Connect power cables from the power supply to all your other stuff, like HDDs/SSDs and optical drives. Consider your cable management to keep the case tidy.</p>
+
+      <br class="clearfix" />
+      <figure class="width-40 float-right">
+        <a href="images/assembly/a14.jpg" target="_blank"><img alt="Step 14" src="images/assembly/a14.jpg" /></a>
+        <figcaption>Step 14</figcaption>
+      </figure>
+      <p><b>Step 14</b>: Connect the SATA cables between your motherboard and your HDDs, SSDs, optical drives, etc. Some SATA ports on your motherboard are faster than others, so connect your SSDs to these.
+        I labeled mine so I know what goes where when I open up the PC later.</p>
+
+      <br class="clearfix" />
+      <figure class="width-40 float-right">
+        <a href="images/assembly/a15.jpg" target="_blank"><img alt="Step 15" src="images/assembly/a15.jpg" /></a>
+        <figcaption>Step 15</figcaption>
+      </figure>
+      <p><b>Step 15</b>: Install the video cards. You might have to remove some panels on the back of the case first, to make place for the cards.
+        Push your lowermost card into place (toward the motherboard) so that it locks into place. You might have to pull the lock toward you to help it get into locked position.
+        Screw it to the case using one or two screws. If you have multiple cards, install them the same way, from the bottom and up so that you can reach the lock on the motherboard.</p>
+
+      <br class="clearfix" />
+      <figure class="width-40 float-right">
+        <a href="images/assembly/a16.jpg" target="_blank"><img alt="Step 16" src="images/assembly/a16.jpg" /></a>
+        <figcaption>Step 16</figcaption>
+      </figure>
+      <p><b>Step 16</b>: Connect the power cables from the power supply to the video cards. If you are using multiple cards, and want to use SLI or CrossFire (the cards need to be the same type),
+        Attach the SLI or CrossFire bridge. If the bridge fits in multiple positions, read the manual to fugure out where it's supposed to be.</p>
+
+      <br class="clearfix" />
+      <figure class="width-40 float-right">
+        <a href="images/assembly/a17.jpg" target="_blank"><img alt="Step 17" src="images/assembly/a17.jpg" /></a>
+        <figcaption>Step 17</figcaption>
+      </figure>
+      <p><b>Step 17</b>: Done. Put the side panels back on the case and fasten them.</p>
+
+      <br class="clearfix" />
+      <figure class="width-40 float-right">
+        <a href="images/assembly/a18.jpg" target="_blank"><img alt="Step 18" src="images/assembly/a18.jpg" /></a>
+        <figcaption>Step 18</figcaption>
+      </figure>
+      <p><b>Step 18</b>: Connect that bad boy to your power grid, monitor, mouse, keyboard, speakers, wired ethernet, and so on.
+        Power it on and see if you get any errors. It will probably complain about finding no bootable media.
+        Se the next page for instruction on installing the operating system.</p>
+
+      <br class="clearfix" />
+      <p><b>Troubleshooting</b>: Did the PC not start or is showing some error?
+        Check out this wonderful <a href="http://www.tomshardware.co.uk/forum/261145-31-perform-steps-posting-post-boot-video-problems">Tom's Hardware article by shortstuff_mt</a>.</p>
+
     </section>
   </body>
 </html>
