--- a/pages/home.inc.html
+++ b/pages/home.inc.html
@@ -23,8 +23,8 @@
         <h1><a href="#wip">Work In Progress</a></h1>
       </header>
 
-      <figure class="float-right">
-        <img width="256px" src="images/logo/logo_512.png" />
+      <figure class="width-50 float-right">
+        <img src="images/logo/logo_512.png" />
         <figcaption>Figure test</figcaption>
       </figure>
 
@@ -54,13 +54,13 @@
 
     <hr />
 
-    <section id="more">
+    <section id="more" class="spin">
       <header>
-        <h1><a href="#more">More!</a></h1>
+        <h1><a href="#more">spinning more best more</a></h1>
       </header>
 
       <ul>
-        <li>More</li>
+        <li>Moooooooore!</li>
       </ul>
     </section>
   </body>
