Wrote Assembly - Software and Quiz, and updated Home.

--- a/pages/assembly/assembly.inc.html
+++ b/pages/assembly/assembly.inc.html
@@ -23,7 +23,7 @@
         <h1><a href="#assembly">Assembling the PC</a></h1>
       </header>
 
-      <p>Lorem ipsum dolor sit amet.</p>
+      <p>This section explains how to combine the parts into a desktop computer and some brief guiding on how to install the operating system.</p>
 
       <h2 id="subpages"><a href="#subpages">Pages</a></h2>
       <ul>
