--- a/pages/assembly/hardware.inc.html
+++ b/pages/assembly/hardware.inc.html
@@ -113,7 +113,8 @@
       </figure>
       <p><b>Step 5</b>: Attach the CPU cooler. It probably has four knob-like objects to fasten it with.
         Turn them all the way clock-wise and then push the cooler (don't push down the knobs yet) directly down into its fastening holes, so that you cause as few as possible bubbles in the thermal compound.
-        Now that the "pins" below the knobs are all the way through the motherboard, push down the knobs which locks the pins to the motherboard.
+        Now that the "pins" below the knobs are all the way through the motherboard, push down the knobs which locks the pins to the motherboard. Connect the fan cable to your motherboard.
+        If your the motherboard doesn't have a very obvious label next to a nearby fan connector saying "CPU_FAN", check your motherboard manual.
         I prefer to install the CPU before attaching the motherboard to the case, since that can make it slightly harder.</p>
 
       <br class="clearfix" />
@@ -168,7 +169,7 @@
         <figcaption>Step 12</figcaption>
       </figure>
       <p><b>Step 12</b>: Attach power cables and cables from the case to your motherboard. There are usually two cables from the power supply,
-        a few smaller cables connecting the power buttons and some LED lights and often some cables for USB and audio ports on the case.
+        a few smaller cables connecting the power buttons and some LED lights, some fan cables and often some cables for USB and audio ports on the case.
         Check your instruction manual for instruction for what to connect where.</p>
 
       <br class="clearfix" />
