--- a/pages/assembly/software.inc.html
+++ b/pages/assembly/software.inc.html
@@ -23,7 +23,21 @@
         <h1><a href="#software">Software</a></h1>
       </header>
 
-      <p>Lorem ipsum dolor sit amet.</p>
+      <h2 id="infto"><a href="#intro">Introduction</a></h2>
+      <p>Most operating systems, including Windows and the most common Linux distrubutions have very easy different installation instructions, which changes once in a while.
+        Therefore I will not write too specific instructions on this, but instead briefly guide you.</p>
+
+      <h2 id="windows"><a href="#windows">Installing Windows</a></h2>
+      <p>Windows costs a bit but most of the programs you might want to use supports it (like Microsoft Office and most games) (Linux often has a lot of open alternatives, though) and might be considered easier to use for some.
+        If you're going for Windows 10, purchase it somewhere (you might find some cheap shops online) and download the media download program from <a href="https://www.microsoft.com/nb-no/software-download/windows10">here</a>.
+        This program downloads Windows and helps you burn it to a disc drive or a USB flash drive. Then just boot your new PC from this drive.</p>
+
+      <h2 id="linux"><a href="#linux">Installing Linux</a></h2>
+      <p>The best bast of Linux is that it's <a href="https://en.wikipedia.org/wiki/Open-source_software">open</a> and most distros are free (as in the price is $0). If you're new to Linux, I recomment <a href="https://www.linuxmint.com/">Linux Mint</a> or <a href="https://www.ubuntu.com/">Ubuntu</a>.
+        Both have very simple installation instructions, which include downloading some disk image and burning it to a DVD or USB flash drive.</p>
+
+      <h2 id="macosx"><a href="#macosx">Installing Mac OS X</a></h2>
+      <p>As long as this isn't a Macintosh computer, installing Mac OS X is illegal. Why did I include this subsection?</p>
     </section>
   </body>
 </html>
