--- a/pages/home.inc.html
+++ b/pages/home.inc.html
@@ -18,50 +18,20 @@
   </head>
 
   <body>
-    <section id="wip">
+    <section id="home">
       <header>
-        <h1><a href="#wip">Work In Progress</a></h1>
+        <h1><a href="#home">A PC Building Tutorial</a></h1>
       </header>
 
-      <figure class="width-50 float-right">
-        <img src="images/logo/logo_512.png" />
-        <figcaption>Figure test</figcaption>
-      </figure>
+      <p>This site will teach you about PC parts, part vendors, operating systems to consider using and how to actually assemble the parts into something useful.
+        If you want to search, if you find any problems or you want to check out the source for this page, check out the the footer.</p>
 
-      <figure class="float-right">
-        <img class="spin" src="images/loading.png" />
-        <figcaption>Loading</figcaption>
-      </figure>
+      <br />
+      <a class="section_link" href="?section=parts">1. Parts</a>
+      <a class="section_link" href="?section=vendors">2. Part Vendors</a>
+      <a class="section_link" href="?section=oss">3. Operating Systems</a>
+      <a class="section_link" href="?section=assembly">4. Assembling the PC</a>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae turpis neque.
-        Curabitur malesuada sollicitudin ligula id cursus. Integer in iaculis ante, vitae porta neque.
-        Integer porttitor nibh non auctor elementum.
-        Sed posuere lectus purus, sit amet interdum sapien ultricies a.
-        Aliquam viverra pharetra tincidunt. Donec nec ante rhoncus, aliquet quam ut, gravida mauris.
-        Praesent eros magna, ullamcorper id maximus varius, venenatis in lorem.
-        Vestibulum tempus blandit nisi, eu bibendum massa ultrices at.
-        In facilisis, tellus eget vestibulum auctor, sem enim mattis justo, eu laoreet elit purus eget velit.
-        Donec sem tortor, sagittis sed dictum convallis, molestie in dui. Nam pretium tempor lobortis.
-        Sed hendrerit nulla quis neque iaculis posuere. Duis eget placerat sem, sit amet cursus mauris.
-        Aliquam tristique, ex nec accumsan ornare, mi nibh condimentum est, a venenatis sapien nisi in tortor.
-        Sed molestie, odio rhoncus scelerisque accumsan, dui dui euismod dolor, at porta eros magna nec erat.</p>
-
-      <div class="code">
-        <p>Code test</p>
-        <p>1234<p/>
-      </div>
-    </section>
-
-    <hr />
-
-    <section id="more" class="spin">
-      <header>
-        <h1><a href="#more">spinning more best more</a></h1>
-      </header>
-
-      <ul>
-        <li>Moooooooore!</li>
-      </ul>
     </section>
   </body>
 </html>
